# Hyper-Q

./: .gitignore  Agent.cpp  Agent.h  Bayesian.h  BayesianHyperQ.h  BayesianUltraQ.h  CMakeLists.txt  CooperationGame.cpp  CooperationGame.h  Definitions.h  EMA.h  Game.h  HyperQ.cpp  HyperQ.h  IGA.cpp  IGA.h  Monotone  Omniscient.h  PHC.cpp  PHC.h  README.md  StrategyEstimation.h  config.json  example_config.json  main.cpp  run.sh
results analysis/: main.py  temp.py  wards std.py
scripts/: test.py
src/: main.cpp
src/agent/: Agent.cpp  Agent.h  BayesianHyperQ.h  BayesianUltraQ.h  HyperQ.h  IGA.cpp  IGA.h  Monotone.h  PHC.cpp  PHC.h
src/estimation/: EMA.h  Omniscient.h  StrategyEstimation.cpp  StrategyEstimation.h
src/exploration/: ExplorationMethod.cpp  ExplorationMethod.h
src/game/: Game.cpp  Game.h  HillClimbing.cpp  HillClimbing.h  RockPaperScissors.cpp  RockPaperScissors.h
src/utils/: Definitions.h
